Remove 144x144 icon; fix icon links; register SW via ./sw.js; bump cache to v5

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta name="apple-mobile-web-app-title" content="LifeTiles" />
 
   <title>LifeTiles</title>
-
-  <link rel="manifest" href="./manifest.json" />
-  <link rel="apple-touch-icon" href="./icons/icon-192x192.png" />
+  <link rel="apple-touch-icon" href="./icons/icon-180x180.png" />
   <link rel="icon" href="./icons/icon-192x192.png" />
+  <link rel="manifest" href="./manifest.json" />
+  <meta name="mobile-web-app-capable" content="yes" />
 
   <link rel="stylesheet" href="./styles.css" />
 </head>
