Step 4: Integrate Daily Challenge calendar with Recurring Items (has-challenge overlay, GMT+8)

--- a/index.html
+++ b/index.html
@@ -47,20 +47,24 @@
                     
                     <div class="calendar-legend">
                         <div class="legend-item">
-                            <span class="legend-color success"></span>
+                            <div class="legend-color success"></div>
                             <span>Success</span>
                         </div>
                         <div class="legend-item">
-                            <span class="legend-color rescued"></span>
+                            <div class="legend-color rescued"></div>
                             <span>Rescued</span>
                         </div>
                         <div class="legend-item">
-                            <span class="legend-color failed"></span>
+                            <div class="legend-color failed"></div>
                             <span>Failed</span>
                         </div>
                         <div class="legend-item">
-                            <span class="legend-color no-challenge"></span>
+                            <div class="legend-color no-challenge"></div>
                             <span>No Challenge</span>
+                        </div>
+                        <div class="legend-item">
+                            <div class="legend-color has-challenge"></div>
+                            <span>Challenge Day</span>
                         </div>
                     </div>
                     
