Step 5: Automatic Daily Challenge status (Success/Rescued/Failed/No Challenge) with GMT+8 rules

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                             <span>Failed</span>
                         </div>
                         <div class="legend-item">
-                            <div class="legend-color no-challenge"></div>
-                            <span>No Challenge</span>
+                            <div class="legend-color pending"></div>
+                            <span>Pending</span>
                         </div>
                         <div class="legend-item">
                             <div class="legend-color has-challenge"></div>
