Refactor: Split monolithic script.js into modular architecture

--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
         </nav>
     </div>
 
-    <script src="script.js"></script>
+    <!-- 模組化的 JavaScript 文件 -->
+    <script src="js/core.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/daily-challenge.js"></script>
+    <script src="js/books-films.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
