fix console error about not including js-files

--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
     </script>
 
     <!-- 3) 模組檔：書/電影清單（這支通常已經以 LifeTilesBooksFilms 方式輸出） -->
-    <script src="books-films.js"></script>
+    <script src="./js/books-films.js"></script>
 
     <!-- 4) 模組版入口：會呼叫 LifeTilesCore / Storage / Todo / DailyChallenge / BooksFilms -->
-    <script src="app.js"></script>
+    <script src="./js/app.js"></script>
 
 </body>
 </html>
